CNG basics in place but there is a problem with EC public keys.  Committing now to have a bash with the BC stuff to see if it throws any light on the EC public key problem.

--- a/OSCA/OSCA.csproj
+++ b/OSCA/OSCA.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OSCA</RootNamespace>
     <AssemblyName>OSCA</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -107,6 +107,7 @@
     <Compile Include="Crypto\CNG\CngSigner.cs" />
     <Compile Include="Crypto\CNG\CngKeyManager.cs" />
     <Compile Include="Crypto\CNG\CngV3CertGen.cs" />
+    <Compile Include="Crypto\CNG\EccKeyBlob.cs" />
     <Compile Include="Crypto\CNG\Rfc4050KeyFormatter.cs" />
     <Compile Include="Crypto\IbcCertGen.cs" />
     <Compile Include="Crypto\IcngCertGen.cs" />
